[package]
name = "erc20_swap"
version = "0.1.0"
edition = "2024"

[dependencies]
ethers = { version = "2.0", features = ["rustls", "legacy"] }
ethers-contract = "2.0"
ethers-core = "2.0"
ethers-providers = "2.0"
ethers-signers = "2.0"
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6"
hex = "0.4"
anyhow = "1.0.100"
dotenv = "0.15.0"
futures = "0.3.31"
bip39 = "2.2.0"